# max-trees

./: CMakeLists.txt  CMakePresets.json  README.md
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: MaxTrees_test.cpp
